Don't include README.md in the project.

--- a/BizArk.Standard.ConsoleApp.Sample/BizArk.Standard.ConsoleApp.Sample.csproj
+++ b/BizArk.Standard.ConsoleApp.Sample/BizArk.Standard.ConsoleApp.Sample.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BizArk.Standard.ConsoleApp\BizArk.Standard.ConsoleApp.csproj" />
     <ProjectReference Include="..\BizArk.Standard.Core\BizArk.Standard.Core.csproj" />
   </ItemGroup>
